--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-beautifulsoup4==4.11.1
-dominate==2.7.0
-requests==2.28.1
-selenium==4.25.0
-pywin32
-wheel
-lxml
+# 核心依赖
+playwright==1.42.0  # 浏览器自动化
+tqdm==4.66.1        # 进度条显示
+jinja2==3.1.3       # HTML模板渲染
+python-dateutil==2.8.2  # 日期处理
+requests==2.31.0    # HTTP请求
+
+# 可选依赖
+colorama==0.4.6     # 控制台彩色输出
+pillow==10.1.0      # 图像处理
+pytest==7.4.3       # 测试框架（仅开发使用） 
